fixed image spacing for real

--- a/index.css
+++ b/index.css
@@ -20,7 +20,6 @@
 .mainPage__header {
   width: 100%;
   display: block;
-  height: 50vw;
 }
 
 .mainPage__portrait {
